// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AppBarIconButton /> when shifted=false matches snapshot 1`] = `
<WithStyles(IconButton)
  aria-label="open drawer"
  className="AppbarButton-menuButton-1"
  color="inherit"
  onClick={[MockFunction]}
>
  <pure(MenuIcon) />
</WithStyles(IconButton)>
`;

exports[`<AppBarIconButton /> when shifted=true matches snapshot 1`] = `
<WithStyles(IconButton)
  aria-label="open drawer"
  className="AppbarButton-menuButton-1 AppbarButton-hide-2"
  color="inherit"
  onClick={[MockFunction]}
>
  <pure(MenuIcon) />
</WithStyles(IconButton)>
`;
